// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RelaySkipHandleFieldTransform matches expected output: mutation-with-handle.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
mutation ViewerMutation($input: CommentCreateInput!) {
  commentCreate(input: $input) {
    viewer @__clientField(handle: "otherViewer") @__clientField(handle: "viewer") {
      actor {
        id
      }
    }
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
mutation ViewerMutation(
  $input: CommentCreateInput!
) {
  commentCreate(input: $input) {
    viewer {
      actor {
        id
      }
    }
  }
}

`;

exports[`RelaySkipHandleFieldTransform matches expected output: query-with-handle.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
query ViewerQuery {
  viewer @__clientField(handle: "otherViewer") @__clientField(handle: "viewer") {
    actor {
      id
    }
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
query ViewerQuery {
  viewer {
    actor {
      id
    }
  }
}

`;
